composant bouton action : ajouter clickEvent

--- a/src/app/pages/articles/page-article/page-article.component.html
+++ b/src/app/pages/articles/page-article/page-article.component.html
@@ -4,7 +4,9 @@
             <h1>Liste des articles</h1>
         </div>
         <div class="col-md-4 text-right">
-            <app-bouton-action></app-bouton-action>
+            <app-bouton-action (clickEvent)="nouvelArticle()">
+
+            </app-bouton-action>
         </div>
     </div>
     <div class="col m-3 pr-5">
