--- a/src/app/composants/bouton-action/bouton-action.component.html
+++ b/src/app/composants/bouton-action/bouton-action.component.html
@@ -8,7 +8,7 @@
             <i class="fas fa-cloud-download-alt"></i>&nbsp;Exporter</button>
     </div>
     <div class="p-2 bd-highlight">
-        <button type="button" class="btn btn-primary">
+        <button type="button" class="btn btn-primary" (click)="boutonNouveauClick()">
             <i class="fa-solid fa-plus"></i>&nbsp;Nouveau</button>
     </div>
 </div>
