--- a/src/app/pages/client/page-client/page-client.component.html
+++ b/src/app/pages/client/page-client/page-client.component.html
@@ -4,7 +4,9 @@
             <h1>Liste des clients</h1>
         </div>
         <div class="col-md-4 text-right">
-            <app-bouton-action></app-bouton-action>
+            <app-bouton-action (clickEvent)="nouveauClient()">
+
+            </app-bouton-action>
         </div>
     </div>
     <div class="col m-3 pr-5">
