--- a/src/app/pages/fournisseur/page-fournisseur/page-fournisseur.component.html
+++ b/src/app/pages/fournisseur/page-fournisseur/page-fournisseur.component.html
@@ -4,7 +4,8 @@
             <h1>Liste des fournisseurs</h1>
         </div>
         <div class="col-md-4 text-right">
-            <app-bouton-action></app-bouton-action>
+            <app-bouton-action (clickEvent)="nouveauFournisseur()">
+            </app-bouton-action>
         </div>
     </div>
     <div class="col m-3 pr-5">
