--- a/src/app/pages/page-cmd-clt-frs/page-cmd-clt-frs.component.html
+++ b/src/app/pages/page-cmd-clt-frs/page-cmd-clt-frs.component.html
@@ -4,7 +4,9 @@
             <h1>Commande client / fournisseur</h1>
         </div>
         <div class="col-md-4 text-right">
-            <app-bouton-action></app-bouton-action>
+            <app-bouton-action (clickEvent)="nouvelleCommande()">
+
+            </app-bouton-action>
         </div>
     </div>
     <div class="col m-3 pr-5">
