Développement des interfaces profil & changer mot de passe

--- a/src/app/composants/header/header.component.html
+++ b/src/app/composants/header/header.component.html
@@ -15,7 +15,9 @@
                 <span>Bonjour Melek</span>
             </div>
             <div class="col-md-3">
-                <img src="favicon.ico" class="rounded-cercle"/>
+                <a href="javascript:void(0);" [routerLink]="['/profil']">
+                    <img src="favicon.ico" class="rounded-cercle"/>
+                </a>
             </div>
         </div>
         
