--- a/src/app/composants/nouvelle-cmd-ctl-frs/nouvelle-cmd-ctl-frs.component.html
+++ b/src/app/composants/nouvelle-cmd-ctl-frs/nouvelle-cmd-ctl-frs.component.html
@@ -1,7 +1,7 @@
 <div class="col mt-3 mb-3">
     <div class="col-md-12">
         <div class="col-md-12 mb-5">
-            <h2>Nouvelle commande</h2>
+            <h2>Nouvelle commande {{origin}}</h2>
         </div>
         <div class="row p-3 custom-border">
             <div class="col-md-5 custom-border-right">
