--- a/src/app/pages/articles/nouvel-article/nouvel-article.component.html
+++ b/src/app/pages/articles/nouvel-article/nouvel-article.component.html
@@ -1,5 +1,5 @@
 <div class="col mt-3 mb-3">
-    <div class="col-md-12 mb-3">
+    <div class="col-md-12 mb-3 mt-3">
         <img src="assets/products.png" class="rounded-cercle" width="200px" height="200px"/>
     </div>
     <hr>
@@ -40,7 +40,7 @@
         </div>
     </div>
     <div class="col-md-12 text-right">
-        <button class="btn btn-danger mr-3">
+        <button class="btn btn-danger mr-3" (click)="cancelClick()">
             <i class="fas fa-ban"></i>&nbsp; Annuler
         </button>
         <button class="btn btn-primary">
