--- a/src/app/composants/bouton-action/bouton-action.component.html
+++ b/src/app/composants/bouton-action/bouton-action.component.html
@@ -1,13 +1,13 @@
 <div class="d-flex flex-row-reverse bd-highlight">
-    <div class="p-2 bd-highlight">
+    <div class="p-2 bd-highlight" *ngIf="isImporterVisible">
         <button type="button" class="btn btn-warning">
             <i class="fas fa-cloud-upload-alt"></i>&nbsp;Importer</button>
     </div>
-    <div class="p-2 bd-highlight">
+    <div class="p-2 bd-highlight" *ngIf="isExporterVisible">
         <button type="button" class="btn btn-success">
             <i class="fas fa-cloud-download-alt"></i>&nbsp;Exporter</button>
     </div>
-    <div class="p-2 bd-highlight">
+    <div class="p-2 bd-highlight" *ngIf="isNouveauVisible">
         <button type="button" class="btn btn-primary" (click)="boutonNouveauClick()">
             <i class="fa-solid fa-plus"></i>&nbsp;Nouveau</button>
     </div>
