--- a/src/app/pages/categories/nouvelle-categorie/nouvelle-categorie.component.html
+++ b/src/app/pages/categories/nouvelle-categorie/nouvelle-categorie.component.html
@@ -19,7 +19,7 @@
         </div>
     </div>
     <div class="col-md-12 text-right">
-        <button class="btn btn-danger mr-3">
+        <button class="btn btn-danger mr-3" (click)="cancelClick()">
             <i class="fas fa-ban"></i>&nbsp; Annuler
         </button>
         <button class="btn btn-primary">
