--- a/src/app/pages/mvtstk/page-mvtstk/page-mvtstk.component.html
+++ b/src/app/pages/mvtstk/page-mvtstk/page-mvtstk.component.html
@@ -4,7 +4,11 @@
             <h1>Mouvement du stock</h1>
         </div>
         <div class="col-md-4 text-right">
-            <app-bouton-action></app-bouton-action>
+            <app-bouton-action
+            [isImporterVisible]="false"
+            [isNouveauVisible]="false"
+            >
+            </app-bouton-action>
         </div>
     </div>
     <div class="col m-3 pr-5">
