--- a/src/app/pages/profil/changer-mot-de-passe/changer-mot-de-passe.component.html
+++ b/src/app/pages/profil/changer-mot-de-passe/changer-mot-de-passe.component.html
@@ -24,7 +24,7 @@
       </form>
       <div class="row">
         <div class="col-md-12 text-right">
-          <button class="btn btn-danger mr-3">
+          <button class="btn btn-danger mr-3" (click)="cancelClick()">
             <i class="fas fa-ban"></i>&nbsp;
             Annuler
           </button>
