upgrde to angular v 17

--- a/src/app/pages/profil/page-profil/page-profil.component.html
+++ b/src/app/pages/profil/page-profil/page-profil.component.html
@@ -24,7 +24,7 @@
         </tr>
         <tr>
           <th scope="row">Email</th>
-          <td>adresse@email.com</td>
+          <td>adresse email.com</td>
         </tr>
         <tr>
           <th scope="row">telephone</th>
@@ -41,6 +41,5 @@
         </tbody>
       </table>
     </div>
-  
+
   </div>
-  
